@@ -4,7 +4,8 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove unused permission "ftw.shop: Add Order".
+  [jone]
 
 
 1.2 (2013-05-28)
